turbopack/crates/turbo-tasks-macros-tests/tests/function/fail_attribute_invalid_args_inherent_impl.stderr
error: unexpected token, expected one of: "fs", "network", "operation", "local", "invalidator"
  --> tests/function/fail_attribute_invalid_args_inherent_impl.rs:14:29
   |
14 |     #[turbo_tasks::function(invalid_argument)]
   |                             ^^^^^^^^^^^^^^^^

warning: unused import: `Vc`
 --> tests/function/fail_attribute_invalid_args_inherent_impl.rs:4:31
  |
4 | use turbo_tasks::{ResolvedVc, Vc};
  |                               ^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `return_contains_resolved_vc` found for struct `Vc<ExampleStruct>` in the current scope
  --> tests/function/fail_attribute_invalid_args_inherent_impl.rs:23:34
   |
23 |     let _ = ExampleStruct.cell().return_contains_resolved_vc();
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `Vc<ExampleStruct>`
